# PL

./: README.md
.github/workflows/: calculator.yml  interpreter.yml
Aufgabe2/: README.md  my_lexer.py  my_parser.py
calculator/: .gitignore  Cargo.toml  README.md
calculator/example/: 99bottles.txt  README.md  comment.txt  complex.txt  factorial.excalidraw  factorial.txt  fibonacci.txt  helloword.txt  hundred.txt  ifelse.txt  infiniteloop.txt  mean.txt  min.txt  repl.txt  single.txt  sum.txt  triple.txt  var.txt
calculator/src/: calculator.rs  calculator_context.rs  cmd_stream.rs  datastack.rs  input_stream.rs  main.rs  op_decimal.rs  op_execution.rs  op_integer.rs  op_string.rs  out_stream.rs  parser.rs  register_set.rs  value.rs
calculator/src/operations/: decimal_place_construction.rs  execution_mode.rs  integer_construction.rs  mod.rs  string_construction.rs
editor/: .gitignore  CHANGELOG.md  README.md  editor.cabal  package.yaml
editor/app/: Main.hs
editor/assets/: about.txt  documentation.txt  welcome.txt
editor/src/: BraceHighlighting.hs  ErrorHighlighting.hs  FileOperations.hs  Highlighting.hs  IdentifierHighlighting.hs  MenuBar.hs  MenuFileActions.hs  Notebook.hs  Parser.hs  Tokenizer.hs  UIComponents.hs
interpreter/: .gitignore  .pre-commit-config.yaml  README.md  ast.py  builtin.py  bunt.py  bunt_ast.py  bunt_error.py  bunt_parser.py  bunt_token.py  environment.py  interpreter.py  location.py  requirements.txt  scanner.py  value.py
interpreter/examples/: excercise_example.bn  fib.bn  fun.bn  ifelse.bn  lambda_if.bn  recursive.bn  scope.bn
(+8 files in other folders)
