[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/flofriday/PL"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
clap = { version = "4.3.3", features = ["derive"] }
